--- a/kintone-help-astro-poc/src/pages/ja/start/space_create/add_team_space.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/space_create/add_team_space.mdx
@@ -28,8 +28,7 @@ import Kintone from "@/components/Kintone.astro";
 
 では、早速「営業部スペース」を作ってみましょう。
 
-1. <Kintone />
-   のポータルで、「スペース」エリアにある+の形をした「スペースを作成する」アイコンをクリックし、[スペースを作成]をクリックします。
+1. <Kintone />のポータルで、「スペース」エリアにある+の形をした「スペースを作成する」アイコンをクリックし、[スペースを作成]をクリックします。
    <Img
      src="/k/kintone/img-ja/add_space_img01.png"
      alt="スクリーンショット：[スペースを作成する]アイコンと[スペースを作成]のリンクが枠線で強調された「ポータル」画面"
@@ -83,10 +82,8 @@ import Kintone from "@/components/Kintone.astro";
   alt="スクリーンショット：完成した営業部スペース"
 />
 
-<Kintone />
-のトップページに戻ると、「スペース」欄に「営業部スペース」が表示され、クリックすると営業部スペースを開くことができます。また、参加メンバーとして設定されたユーザーの
-<Kintone />
-でも同じように表示されます。
+<Kintone />のトップページに戻ると、「スペース」欄に「営業部スペース」が表示され、クリックすると営業部スペースを開くことができます。また、参加メンバーとして設定されたユーザーの
+<Kintone />でも同じように表示されます。
 <Img
   src="/k/kintone/img-ja/add_team_space_img10.png"
   alt="スクリーンショット：「スペース」欄の「営業部スペース」を枠線で強調"
