--- a/kintone-help-astro-poc/src/pages/ja/start/departments_users/add_departments.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/departments_users/add_departments.mdx
@@ -37,13 +37,13 @@ import SlashUi from "@/components/SlashUi.astro";
 
 1. <Kintone />の画面上部の歯車の形をした[設定]アイコンをクリックし、[<SlashUi />]をクリックします。
 
-   <Enabled for="JP">
+   <Enabled regions={["JP"]}>
    <Img src="/k/kintone/img-ja/slash_setting_menu.png" alt="スクリーンショット：[<SlashUi />]が枠線で囲まれている" />
    </Enabled>
-   <Enabled for="CN">
+   <Enabled regions={["CN"]}>
    <Img src="/k/kintone/img-ja/slash_setting_menu_cn.png" alt="スクリーンショット：[<SlashUi />]が枠線で囲まれている" />
    </Enabled>
-   <Enabled for="US">
+   <Enabled regions={["US"]}>
    <Img src="/k/kintone/img-ja/slash_setting_menu_us.png" alt="スクリーンショット：[<SlashUi />]が枠線で囲まれている" />
    </Enabled>
 
