--- a/kintone-help-astro-poc/src/pages/ja/start/departments_users/invite_team_members.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/departments_users/invite_team_members.mdx
@@ -20,7 +20,7 @@ import SlashUi from "@/components/SlashUi.astro";
 <Kintone />では、30日間の無料お試し期間に、招待機能を利用して<Kintone />にメンバーを追加できます。  
 部署やプロジェクトチームのメンバーを招待して、<Kintone />を使ったデータ共有やコミュニケーションを試してみましょう。
 
-<Enabled for="JP">
+<Enabled regions={["JP"]}>
 <Hint>
 
 * お試し期間中にチームメンバーを招待できるのは、<Slash />共通管理者のみです。  
@@ -54,7 +54,7 @@ import SlashUi from "@/components/SlashUi.astro";
 招待したメンバーにはメールが送信されます。
 <Img src="/k/kintone/img-ja/invite_team_members_05_1.png" alt="スクリーンショット：招待されたメンバーに届くメール" />
 
-<Enabled for="JP">
+<Enabled regions={["JP"]}>
 
 招待メールを受け取ったチームメンバーが<Kintone />にログインする方法については、「[招待メールからログインする](/k/ja/id/040140.html)」を参照してください。
 
@@ -82,7 +82,7 @@ import SlashUi from "@/components/SlashUi.astro";
 
 招待したメンバーにはメールが送信されます。
 
-<Enabled for="JP">
+<Enabled regions={["JP"]}>
 
 メールを受け取ったメンバーが<Kintone />にログインする方法については、「[招待メールからログインする](/k/ja/id/040140.html)」を参照してください。
 
