--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_description.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_description.mdx
@@ -16,27 +16,35 @@ import Note from "@/components/Note.astro";
 検索AIの説明を変更します。  
 検索AIの説明は、ユーザーが利用するチャットボット画面上部に表示されます。
 
-<Img src="/k/img-ja/search_prefs_description_01.png" alt="スクリーンショット：ユーザーが利用するチャットボット画面で検索AIの説明が強調されている" />
+<Img src="/k/kintone/img-ja/search_prefs_description_01.png" alt="スクリーンショット：ユーザーが利用するチャットボット画面で検索AIの説明が強調されている" />
 
 <Heading level={2} id="assist_settings_search_prefs_description_10">手順</Heading>
 
-1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［{{< kintone >}} AI管理］をクリックします。  
-   <Img src="/k/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［<Kintone /> AI管理］をクリックします。  
 
-1. ［{{< kintone >}} AI管理］画面の［{{< kintone >}} AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
-   <Img src="/k/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+<Img src="/k/kintone/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+
+
+1. ［<Kintone /> AI管理］画面の［<Kintone /> AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
+
+<Img src="/k/kintone/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+
 
 1. ［検索AI管理］画面で、説明を変更する検索AIの［設定］をクリックします。  
-   <Img src="/k/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
+<Img src="/k/kintone/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
 
 1. ［検索AI設定］画面で、検索AIの説明の右横にある［編集］をクリックします。  
-   <Img src="/k/img-ja/search_prefs_description_02.png" alt="スクリーンショット：［検索AI設定］画面で［編集］ボタンが強調されている" />
 
-   <Note>
-  * WebサイトのURLを記載すると自動的にリンクとして表示されます。
-     * ［アプリコード］を設定した［レコード番号］を記載すると、対応するレコードへ自動でリンクされます。  
-       ［アプリコード］についての詳細は、次のページを参照してください。  
-       [アプリコードを設定する](/k/ja/id/040478.html)
+<Img src="/k/kintone/img-ja/search_prefs_description_02.png" alt="スクリーンショット：［検索AI設定］画面で［編集］ボタンが強調されている" />
+
+<Note>
+* WebサイトのURLを記載すると自動的にリンクとして表示されます。
+* ［アプリコード］を設定した［レコード番号］を記載すると、対応するレコードへ自動でリンクされます。  
+［アプリコード］についての詳細は、次のページを参照してください。  
+[アプリコードを設定する](/k/ja/id/040478.html)
+
 </Note>
 
 1. 設定したい説明を入力します。
