--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_name.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_name.mdx
@@ -14,23 +14,31 @@ import Kintone from "@/components/Kintone.astro";
 
 各検索AIのチャットボットの名前を変更できます。  
 各検索AIの名前は、ユーザーが各検索AIのチャットボットを開くときに、画面上部に表示されるメニュー名になります。  
-<Img src="/k/img-ja/search_prefs_name_01.png" alt="スクリーンショット：検索AIの名前が強調されている画面上部のメニュー" />
+<Img src="/k/kintone/img-ja/search_prefs_name_01.png" alt="スクリーンショット：検索AIの名前が強調されている画面上部のメニュー" />
 また、ユーザーが利用するチャットボット画面上部に表示されます。  
-<Img src="/k/img-ja/search_prefs_name_02.png" alt="スクリーンショット：検索AIの利用画面で検索AIの名前が強調されている" />
+<Img src="/k/kintone/img-ja/search_prefs_name_02.png" alt="スクリーンショット：検索AIの利用画面で検索AIの名前が強調されている" />
 
 <Heading level={2} id="assist_settings_search_prefs_name_10">手順</Heading>
 
-1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［{{< kintone >}} AI管理］をクリックします。  
-   <Img src="/k/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［<Kintone /> AI管理］をクリックします。  
 
-1. ［{{< kintone >}} AI管理］画面の［{{< kintone >}} AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
-   <Img src="/k/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+<Img src="/k/kintone/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+
+
+1. ［<Kintone /> AI管理］画面の［<Kintone /> AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
+
+<Img src="/k/kintone/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+
 
 1. ［検索AI管理］画面で、名前を変更する検索AIの［設定］をクリックします。  
-   <Img src="/k/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
+<Img src="/k/kintone/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
 
 1. ［検索AI設定］画面で、検索AIの名前の右横にある［編集］をクリックします。
-   <Img src="/k/img-ja/search_prefs_name_03.png" alt="スクリーンショット：［検索AI設定］画面で［編集］ボタンが強調されている" />
+
+<Img src="/k/kintone/img-ja/search_prefs_name_03.png" alt="スクリーンショット：［検索AI設定］画面で［編集］ボタンが強調されている" />
+
 
 1. 設定したい名前を入力します。
 
