--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_prompt_button.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_prompt_button.mdx
@@ -15,18 +15,24 @@ import Kintone from "@/components/Kintone.astro";
 プロンプトボタンを設定すると、ユーザーが検索AIを利用するときに、ボタンをクリックするだけで、検索AIへの質問や指示を送信できるようになります。  
 よく利用される質問や指示を事前に設定することで、ユーザーは質問内容を入力せずに済みます。  
 このページでは、プロンプトボタンの設定方法について説明します。  
-<Img src="/k/img-ja/search_prefs_prompt_button_01.png" alt="スクリーンショット：プロンプトボタンが設定されているチャットボット画面" />
+<Img src="/k/kintone/img-ja/search_prefs_prompt_button_01.png" alt="スクリーンショット：プロンプトボタンが設定されているチャットボット画面" />
 
 <Heading level={2} id="assist_settings_search_prefs_prompt_button_10">手順</Heading>
 
-1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［{{< kintone >}} AI管理］をクリックします。  
-   <Img src="/k/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［<Kintone /> AI管理］をクリックします。  
 
-1. ［{{< kintone >}} AI管理］画面の［{{< kintone >}} AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
-   <Img src="/k/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+<Img src="/k/kintone/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+
+
+1. ［<Kintone /> AI管理］画面の［<Kintone /> AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
+
+<Img src="/k/kintone/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+
 
 1. ［検索AI管理］画面で、プロンプトボタンを設定する［検索AI］の［設定］をクリックします。  
-   <Img src="/k/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
+<Img src="/k/kintone/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
 
 1. ［検索AI設定］画面で、［プロンプトボタン］タブをクリックします。
 
