--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_usage/use_search.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_usage/use_search.mdx
@@ -40,7 +40,7 @@ import Note from "@/components/Note.astro";
 
 <Heading level={2} id="assist_usage_use_search_10">質問文や指示を自分で入力する</Heading>
 
-1. <Kintone />の画面上部にある［{{< kintone >}} AI］アイコンをクリックします。
+1. <Kintone />の画面上部にある［<Kintone /> AI］アイコンをクリックします。
 
 1. 利用したい検索AIの名前をクリックして、チャットボット画面を開きます。
 
@@ -53,7 +53,7 @@ import Note from "@/components/Note.astro";
 
 <Heading level={2} id="assist_usage_use_search_20">プロンプトボタンを使う</Heading>
 
-1. <Kintone />の画面上部にある［{{< kintone >}} AI］アイコンをクリックします。
+1. <Kintone />の画面上部にある［<Kintone /> AI］アイコンをクリックします。
 
 1. 利用したい検索AIの名前をクリックして、チャットボット画面を開きます。
 
