--- a/kintone-help-astro-poc/src/pages/ja/ai/app_boost/enhance_usage/open_app_creation.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/app_boost/enhance_usage/open_app_creation.mdx
@@ -25,22 +25,24 @@ import Note from "@/components/Note.astro";
 
 1. <Kintone />のポータルで、［アプリ］エリアにある［アプリを作成する］アイコン（+の形）をクリックします。
 
-1. ［{{< kintone >}}アプリストア］画面で、［はじめから作成］をクリックします。
+1. ［<Kintone />アプリストア］画面で、［はじめから作成］をクリックします。
 
-1. ［アプリの設定］画面上部にある［{{< kintone >}} AI］アイコンをクリックします。
+1. ［アプリの設定］画面上部にある［<Kintone /> AI］アイコンをクリックします。
 
 1. ［アプリ作成AI］をクリックします。  
-   <Img src="/k/img-ja/open_app_creation_01.png" alt="スクリーンショット：［アプリ作成AI］の操作リンクが強調されているメニュー" />
+
+<Img src="/k/kintone/img-ja/open_app_creation_01.png" alt="スクリーンショット：［アプリ作成AI］の操作リンクが強調されているメニュー" />
+
 
 <Heading level={2} id="enhance_usage_open_app_creation_20">アプリ作成AIの利用画面の構成</Heading>
 
-<Img src="/k/img-ja/open_app_creation_02.png" alt="スクリーンショット：アプリ作成AIの利用画面" />
+<Img src="/k/kintone/img-ja/open_app_creation_02.png" alt="スクリーンショット：アプリ作成AIの利用画面" />
 
 <Heading level={3} id="enhance_usage_open_app_creation_2010">(1) プロンプトの入力欄</Heading>
 
 質問や指示内容を入力する欄です。
 
-### (2) ［送信］ボタン{#enhance_usage_open_app_creation_2020}
+<Heading level={3} id="enhance_usage_open_app_creation_2020">(2) ［送信］ボタン</Heading>
 
 プロンプト入力欄に入力した質問や指示内容を、アプリ作成AIに送信するボタンです。クリックすると、アプリ作成AIの回答生成が始まります。
 
@@ -51,6 +53,6 @@ import Note from "@/components/Note.astro";
   * macOSの場合：Command＋Enterキー
 </Hint>
 
-### (3) ［この内容をフォームに反映］{#enhance_usage_open_app_creation_2030}
+<Heading level={3} id="enhance_usage_open_app_creation_2030">(3) ［この内容をフォームに反映］</Heading>
 
 アプリ作成AIが提案した内容を、フォームに反映するボタンです。フォームに反映されるまで時間がかかる場合があります。
