--- a/kintone-help-astro-poc/src/pages/ja/ai/app_boost/enhance_usage/start_app_creation.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/app_boost/enhance_usage/start_app_creation.mdx
@@ -26,12 +26,14 @@ import Warning from "@/components/Warning.astro";
 
 1. <Kintone />のポータルで、［アプリ］エリアにある［アプリを作成する］アイコン（+の形）をクリックします。
 
-1. ［{{< kintone >}}アプリストア］画面で、［はじめから作成］をクリックします。
+1. ［<Kintone />アプリストア］画面で、［はじめから作成］をクリックします。
 
-1. ［アプリの設定］画面上部にある［{{< kintone >}} AI］アイコンをクリックします。
+1. ［アプリの設定］画面上部にある［<Kintone /> AI］アイコンをクリックします。
 
 1. ［アプリ作成AI］をクリックします。
-   <Img src="/k/img-ja/open_app_creation_01.png" alt="スクリーンショット：［アプリ作成AI］の操作リンクが強調されているメニュー" />
+
+<Img src="/k/kintone/img-ja/open_app_creation_01.png" alt="スクリーンショット：［アプリ作成AI］の操作リンクが強調されているメニュー" />
+
 
 1. プロンプト入力欄に、作りたいアプリについて指示や質問を入力して、アプリ作成AIと会話します。  
    アプリ作成AIとの会話例：
@@ -41,21 +43,23 @@ import Warning from "@/components/Warning.astro";
 
 1. アプリ作成AIが提案した内容をフォームに反映する場合は、［この内容をフォームに反映］をクリックします。
 
-   <Hint>一度アプリ作成AIからの提案をフォームに反映したあとも、アプリ作成AIと会話を続けて、フォームを修正できます。ただし、［アプリ作成AI］画面を閉じると会話がリセットされます。会話を続けてフォームを修正する可能性がある場合は、［アプリ作成AI］画面を開いたままにしてください。</Hint>
+<Hint>一度アプリ作成AIからの提案をフォームに反映したあとも、アプリ作成AIと会話を続けて、フォームを修正できます。ただし、［アプリ作成AI］画面を閉じると会話がリセットされます。会話を続けてフォームを修正する可能性がある場合は、［アプリ作成AI］画面を開いたままにしてください。</Hint>
+
 
 1. 必要に応じて、ユーザー自身がフォームのレイアウトを調整したり、ほかの機能を設定したりします。
 
 1. このままアプリを公開する場合は、［アプリの設定］画面で、［アプリを公開］をクリックし、確認ダイアログで［OK］をクリックします。
 
-   <Hint>
-  たとえば、試しにアプリ作成AIを利用しただけで、アプリを公開しない場合や、運用開始前のアプリとして保存しない場合は、アプリの作成を終了してください。  
-     アプリの作成を終了する手順は、次のとおりです。  
-     * ［アプリの設定］画面で、［作成を中止］をクリックし、確認ダイアログで［OK］をクリックします。
+<Hint>
+たとえば、試しにアプリ作成AIを利用しただけで、アプリを公開しない場合や、運用開始前のアプリとして保存しない場合は、アプリの作成を終了してください。  
+アプリの作成を終了する手順は、次のとおりです。  
+* ［アプリの設定］画面で、［作成を中止］をクリックし、確認ダイアログで［OK］をクリックします。
+
 </Hint>
 
 1. ［アプリ作成AI］画面を閉じます。
 
-<Note>アプリ作成AIを開いて会話をしている途中で、再度［アプリの設定］画面上部にある［{{< kintone >}} AI］アイコンをクリックして、［アプリ作成AI］をクリックすると、会話がリセットされます。</Note>
+<Note>アプリ作成AIを開いて会話をしている途中で、再度［アプリの設定］画面上部にある［<Kintone /> AI］アイコンをクリックして、［アプリ作成AI］をクリックすると、会話がリセットされます。</Note>
 
 <Heading level={3} id="enhance_usage_start_app_creation_20">アプリ作成AIからフォームに設置できるフィールド</Heading>
 
