--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_access.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_access.mdx
@@ -18,14 +18,20 @@ import Note from "@/components/Note.astro";
 
 <Heading level={2} id="assist_settings_search_prefs_access_10">手順</Heading>
 
-1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［{{< kintone >}} AI管理］をクリックします。  
-   <Img src="/k/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［<Kintone /> AI管理］をクリックします。  
 
-1. ［{{< kintone >}} AI管理］画面の［{{< kintone >}} AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
-   <Img src="/k/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+<Img src="/k/kintone/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+
+
+1. ［<Kintone /> AI管理］画面の［<Kintone /> AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
+
+<Img src="/k/kintone/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+
 
 1. ［検索AI管理］画面で、アクセス権を設定する検索AIの［設定］をクリックします。  
-   <Img src="/k/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
+<Img src="/k/kintone/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
 
 1. ［検索AI設定］画面で、［アクセス権］タブをクリックします。
 
@@ -45,6 +51,7 @@ import Note from "@/components/Note.astro";
 
     組織を追加した場合、［子組織を含める］にチェックを入れると、その子組織に所属するユーザーにもアクセス権が適用されます。
 
-   <Note>利用できるユーザー、組織、またはグループは、1つ以上選択する必要があります。</Note>
+<Note>利用できるユーザー、組織、またはグループは、1つ以上選択する必要があります。</Note>
+
 
 1. 画面右上にある［保存］をクリックします。
