--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_display.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_display.mdx
@@ -14,20 +14,26 @@ import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
 
 検索AIをどの画面に設置するかを設定できます。  
-ユーザーは、設置場所に選択した画面を開いているときに、<Kintone />の画面上部にある［{{< kintone >}} AI］のアイコンから、検索AIを利用できます。  
+ユーザーは、設置場所に選択した画面を開いているときに、<Kintone />の画面上部にある［<Kintone /> AI］のアイコンから、検索AIを利用できます。  
 このページでは、検索AIの設置場所の設定手順を説明します。  
-<Img src="/k/img-ja/search_prefs_display_01.png" alt="スクリーンショット：ナビゲーションバーの検索AIアイコンが強調されている" />
+<Img src="/k/kintone/img-ja/search_prefs_display_01.png" alt="スクリーンショット：ナビゲーションバーの検索AIアイコンが強調されている" />
 
 <Heading level={2} id="assist_settings_search_prefs_display_10">手順</Heading>
 
-1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［{{< kintone >}} AI管理］をクリックします。  
-   <Img src="/k/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+1. <Kintone />の画面上部にある［設定］アイコン（歯車の形）をクリックし、［<Kintone /> AI管理］をクリックします。  
 
-1. ［{{< kintone >}} AI管理］画面の［{{< kintone >}} AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
-   <Img src="/k/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+<Img src="/k/kintone/img-ja/ai_enable_01.png" alt="スクリーンショット：［<Kintone /> AI管理］の操作リンクが強調された［設定］メニュー" />
+
+
+1. ［<Kintone /> AI管理］画面の［<Kintone /> AIラボ］セクションの［検索AI］という機能名の下にある［設定］をクリックします。  
+
+<Img src="/k/kintone/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
+
 
 1. ［検索AI管理］画面で、設置場所を設定する検索AIの［設定］をクリックします。  
-   <Img src="/k/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
+<Img src="/k/kintone/img-ja/search_prefs_change_01.png" alt="スクリーンショット：［検索AI管理］画面で［設定］が強調されている" />
+
 
 1. ［検索AI設定］画面で、［設置場所］タブをクリックします。
 
@@ -39,9 +45,10 @@ import Note from "@/components/Note.astro";
     * ［データソースに使用するアプリの画面にのみ設置する］  
       ［回答生成に使用するデータソース］に設定されているアプリの画面に設置されます。
 
-   <Note>
-  データソースの設定についての詳細は、次のページを参照してください。  
-     [データソースを指定する](/k/ja/id/040879.html)
+<Note>
+データソースの設定についての詳細は、次のページを参照してください。  
+[データソースを指定する](/k/ja/id/040879.html)
+
 </Note>
 
 1. 画面右上にある［保存］をクリックします。
