--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_usage/open_search.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_usage/open_search.mdx
@@ -22,23 +22,27 @@ import Note from "@/components/Note.astro";
       設定方法の詳細は、次のページを参照してください。  
       [<Kintone /> AIの有効化と利用する機能の選択](/k/ja/id/040869.html)
     * <Kintone />システム管理者が、ユーザーが利用できる検索AIを作成する  
-      ユーザーが表示している画面で利用できる検索AIが存在しない場合、<Kintone />の画面上部に［{{< kintone >}} AI］アイコンは表示されません。
+      ユーザーが表示している画面で利用できる検索AIが存在しない場合、<Kintone />の画面上部に［<Kintone /> AI］アイコンは表示されません。
     * 利用できる検索AIは、<Kintone />システム管理者の設定によって、ユーザーや画面ごとに異なります。
 </Note>
 
 <Heading level={2} id="assist_usage_open_search_10">検索AIのチャットボット画面の開きかた</Heading>
 
-1. <Kintone />の画面上部にある［{{< kintone >}} AI］アイコンをクリックします。  
-   <Img src="/k/img-ja/open_search_01.png" alt="スクリーンショット：画面上部にある［<Kintone /> AI］が強調されている" />
+1. <Kintone />の画面上部にある［<Kintone /> AI］アイコンをクリックします。  
+
+<Img src="/k/kintone/img-ja/open_search_01.png" alt="スクリーンショット：画面上部にある［<Kintone /> AI］が強調されている" />
+
 
 1. 利用したい検索AIの名前をクリックします。  
-   <Img src="/k/img-ja/open_search_02.png" alt="スクリーンショット：検索AIが強調されている画面上部のメニュー" />
+
+<Img src="/k/kintone/img-ja/open_search_02.png" alt="スクリーンショット：検索AIが強調されている画面上部のメニュー" />
+
 
 <Heading level={2} id="assist_usage_open_search_20">検索AIのチャットボット画面の構成</Heading>
 
-<Img src="/k/img-ja/open_search_03.png" alt="スクリーンショット：検索AIのチャットボット画面" />
+<Img src="/k/kintone/img-ja/open_search_03.png" alt="スクリーンショット：検索AIのチャットボット画面" />
 
-### (1) ［新しく質問する］ボタン{#assist_usage_open_search_2010}
+<Heading level={3} id="assist_usage_open_search_2010">(1) ［新しく質問する］ボタン</Heading>
 
 新しいチャットボット画面を表示します。  
 クリックすると、これまでの検索AIに対する質問や回答はリセットされます。
@@ -47,12 +51,12 @@ import Note from "@/components/Note.astro";
 
 利用する検索AIの名前が表示されます。
 
-### (3) ［最小化］ボタン{#assist_usage_open_search_2030}
+<Heading level={3} id="assist_usage_open_search_2030">(3) ［最小化］ボタン</Heading>
 
 クリックすると、<Kintone />の画面右下に最小化されます。  
 チャットボット画面を再表示するには、［最大化］ボタンをクリックします。
 
-### (4) ［閉じる］ボタン{#assist_usage_open_search_2040}
+<Heading level={3} id="assist_usage_open_search_2040">(4) ［閉じる］ボタン</Heading>
 
 検索AIを終了します。
 
@@ -70,7 +74,7 @@ import Note from "@/components/Note.astro";
 
 質問や指示内容を入力する欄です。
 
-### (8) ［送信］ボタン{#assist_usage_open_search_2080}
+<Heading level={3} id="assist_usage_open_search_2080">(8) ［送信］ボタン</Heading>
 
 プロンプト入力欄に入力した質問や指示内容を、検索AIに送信するボタンです。
 クリックすると、検索AIの回答生成が始まります。
