--- a/kintone-help-astro-poc/src/pages/ja/ai/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/index.mdx
@@ -11,6 +11,7 @@ layout: "@/layouts/SectionLayout.astro"
 import Heading from "@/components/Heading.astro";
 import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
+import SlashUi from "@/components/SlashUi.astro";
 
 AI技術を活用した、さまざまな機能をご利用いただけます。  
 <Kintone /> AIラボの枠組みでは、新しい機能をいち早くお試しいただけます。
@@ -31,7 +32,7 @@ AI技術を活用した、さまざまな機能をご利用いただけます。
 * チーム応援ライセンスを契約している
 
 <Note>
-  2025年4月現在、上記の利用条件を満たしていても［{{< slash_ui >}}］の［組織間のアクセス権］画面で［組織間のアクセスを禁止する］にチェックを入れている場合は<Kintone /> AIラボのサービスを利用できません。  
+  2025年4月現在、上記の利用条件を満たしていても［<SlashUi />］の［組織間のアクセス権］画面で［組織間のアクセスを禁止する］にチェックを入れている場合は<Kintone /> AIラボのサービスを利用できません。  
   「組織間のアクセス権」についての詳細は、次のページを参照してください。  
    [組織間のアクセスを禁止する](/general/ja/id/020164.html)
 </Note>
@@ -44,7 +45,7 @@ AI技術を活用した、さまざまな機能をご利用いただけます。
 * ライトコースを契約している
 * 開発者ライセンスを利用している
 
-## <Kintone /> AIラボのサポート{#ai_index_40}
+<Heading level={2} id="ai_index_40"><Kintone /> AIラボのサポート</Heading>
 
 <Kintone /> AIラボのサービスで提供している機能は、開発中の機能であるため、弊社サポートの対象外です。
 
