--- a/kintone-help-astro-poc/src/pages/ja/start/app_create/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/app_create/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "アプリを作ってみる"
 weight: 400
-aliases: /ja/id/040131
+aliases: "/ja/id/040131"
 layout: "@/layouts/SectionLayout.astro"
 ---
 
