--- a/kintone-help-astro-poc/src/pages/ja/start/departments_users/to_be_invited.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/departments_users/to_be_invited.mdx
@@ -1,10 +1,10 @@
 ---
-title: 招待メールからログインする
+title: "招待メールからログインする"
 weight: 200
 disabled:
-  - US
-  - CN
-aliases: /ja/id/040140
+  - "US"
+  - "CN"
+aliases: "/ja/id/040140"
 layout: "@/layouts/PageLayout.astro"
 ---
 
@@ -15,44 +15,22 @@ import Note from "@/components/Note.astro";
 招待メールを受け取った場合、そのメールから<Kintone />に参加できます。
 
 <Note>
-
-招待メールが届くまでの流れは、次のページを参照してください。
-
-- [チームメンバーを招待する](/k/ja/id/040139.html)
-
+  招待メールが届くまでの流れは、次のページを参照してください。  
+  [チームメンバーを招待する](/k/ja/id/040139.html)
 </Note>
 
 1. 受信した招待メールを開きます。送信者は「kintone \<no-reply@cybozu.com>」です。
+   <Img src="/k/kintone/img-ja/to_be_invited_01.png" alt="スクリーンショット：招待メール" />
 
-   <Img
-     src="/k/kintone/img-ja/to_be_invited_01.png"
-     alt="スクリーンショット：招待メール"
-   />
+1. 招待者を確認して、［<Kintone />に参加する］をクリックします。画像では、加藤美咲さんが招待者です。
+   <Img src="/k/kintone/img-ja/to_be_invited_02.png" alt="スクリーンショット：［<Kintone />に参加する］ボタンが枠線で強調された招待メール" />
 
-1. 招待者を確認して、[<Kintone />に参加する]をクリックします。画像では、加藤美咲さんが招待者です。
+1. メールに記載されているログイン名と初期パスワードをコピー&ペーストなどで入力し、［ログイン］をクリックします。
+   <Img src="/k/kintone/img-ja/to_be_invited_03.png" alt="スクリーンショット：［ログイン］画面" />
 
-   <Img
-     src="/k/kintone/img-ja/to_be_invited_02.png"
-     alt="スクリーンショット：[<Kintone />に参加する]ボタンが枠線で強調された招待メール"
-   />
-
-1. メールに記載されているログイン名と初期パスワードをコピー&ペーストなどで入力し、[ログイン]をクリックします。
-
-   <Img
-     src="/k/kintone/img-ja/to_be_invited_03.png"
-     alt="スクリーンショット：ログイン画面"
-   />
-
-1. パスワードの変更を求められたら、新しいパスワードを入力して[保存]をクリックします。
-   <Img
-     src="/k/kintone/img-ja/to_be_invited_04.png"
-     alt="スクリーンショット：パスワード変更画面"
-   />
+1. パスワードの変更を求められたら、新しいパスワードを入力して［保存］をクリックします。
+   <Img src="/k/kintone/img-ja/to_be_invited_04.png" alt="スクリーンショット：パスワード変更画面" />
 
 これで、<Kintone />にログインできました。  
-「<Kintone />へようこそ！」ダイアログが表示されたら、[次へ]をクリックして進めると、アプリの作成を試すことができます。
-
-<Img
-  src="/k/kintone/img-ja/to_be_invited_05.png"
-  alt="スクリーンショット：[次へ]ボタンが枠線で強調された「<Kintone />へようこそ！」ダイアログ"
-/>
+［<Kintone />へようこそ！］ダイアログが表示されたら、［次へ］をクリックして進めると、アプリの作成を試すことができます。
+<Img src="/k/kintone/img-ja/to_be_invited_05.png" alt="スクリーンショット：［次へ］ボタンが枠線で強調された［<Kintone />へようこそ！］ダイアログ" />
