--- a/kintone-help-astro-poc/src/pages/ja/start/more_information.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/more_information.mdx
@@ -1,42 +1,46 @@
 ---
-title: <Kintone />をもっと知りたくなったら
+title: "{{< kintone >}}をもっと知りたくなったら"
 weight: 600
 disabled:
-  - US
-  - CN
-aliases: /ja/id/040827
-layout: '@/layouts/PageLayout.astro'
+  - "US"
+  - "CN"
+aliases: "/ja/id/040827"
+layout: "@/layouts/PageLayout.astro"
 ---
 
 import Heading from "@/components/Heading.astro";
 import Kintone from "@/components/Kintone.astro";
 
-
 アプリの作成や設定の手順だけでなく、<Kintone />を活用するためのヒントを用意しています。  
 業種ごとにどんなアプリが作られているか、チームで<Kintone />をどのように活用しているかを知りたいときは、次のコンテンツを参照してください。
 
-<Heading id="more_information_10"><Kintone />の導入事例集</Heading>
+<Heading level={2} id="more_information_10"><Kintone />の導入事例集</Heading>
+
 さまざまな業務で使われている<Kintone />の導入事例集です。  
 部署別、用途ごとに、導入事例を紹介しています。  
 [事例を探す](https://kintone-sol.cybozu.co.jp/cases/#case_search)  
 [部署別の使い方](https://kintone.cybozu.co.jp/jobtype/)  
 [用途別の使い方](https://kintone.cybozu.co.jp/purpose/)  
 
-<Heading id="more_information_20"><Kintone />の歩き方</Heading>
+<Heading level={2} id="more_information_20"><Kintone />の歩き方</Heading>
+
 <Kintone />を導入してから1年の間に、知ってほしい情報を楽しく学べるコンテンツです。  
 <Kintone />の活用や社内への浸透のコツ、つまずきやすいポイントなどを紹介しています。  
 [<Kintone />の歩き方](https://kintone.cybozu.co.jp/support/arukikata/)
 
-<Heading id="more_information_30">動画で学ぶキントーン</Heading>
+<Heading level={2} id="more_information_30">動画で学ぶキントーン</Heading>
+
 <Kintone />の概要や基本操作を紹介している動画です。  
 [動画で学ぶ](https://kintone.cybozu.co.jp/seminar/ondemand.html)
 
-<Heading id="more_information_40">ユーザーコミュニティー</Heading>
+<Heading level={2} id="more_information_40">ユーザーコミュニティー</Heading>
+
 <Kintone />のユーザー向けのオンラインコミュニティーです。  
 他のユーザーとノウハウをシェアしたり、質問し合ったりすることによって、業務改善や<Kintone />活用のヒントを学ぶことができます。  
 [キントーンユーザーコミュニティ「キンコミ」](https://kincom.cybozu.co.jp/)
 
-<Heading id="more_information_50">セミナーコンテンツ</Heading>
+<Heading level={2} id="more_information_50">セミナーコンテンツ</Heading>
+
 <Kintone />の導入から社内での浸透や定着までサポートするセミナーコンテンツです。  
 セミナーでは、実際に手を動かしながら、質疑応答して疑問点を解消できます。  
 [スタートガイドセミナー](https://kintone.cybozu.co.jp/support/arukikata/kintone-startguide-seminar/)
