--- a/kintone-help-astro-poc/src/pages/ja/start/space_create/add_team_space.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/space_create/add_team_space.mdx
@@ -1,13 +1,13 @@
 ---
-title: チームのスペースを作ってみよう
+title: "チームのスペースを作ってみよう"
 weight: 100
-type: series
-aliases: /ja/id/040143
+type: "series"
+aliases: "/ja/id/040143"
 layout: "@/layouts/PageLayout.astro"
 ---
 
-import Hint from "@/components/Hint.astro";
 import Img from "@/components/Img.astro";
+import Hint from "@/components/Hint.astro";
 import Kintone from "@/components/Kintone.astro";
 
 スペースとは、必要なやり取りや情報を集約できるチームの「場所」のようなものです。チームやプロジェクトごとにスペースを作成し、そのスペースに参加するメンバーを自由に設定できます。
@@ -16,85 +16,51 @@ import Kintone from "@/components/Kintone.astro";
 
 **完成イメージ：**  
 ここでは、例として次のような「営業部スペース」を作成してみます。
-
-<Img
-  src="/k/kintone/img-ja/add_team_space_img11.png"
-  alt="スクリーンショット：完成した「営業部スペース」画面"
-/>
+<Img src="/k/kintone/img-ja/add_team_space_img11.png" alt="スクリーンショット：完成した「営業部スペース」の画面" />
 
 (1)： スペースの名前は、「営業部スペース」という名前にします。  
-(2)：「スレッド」とは、スペース内でテーマごとに作成できる掲示板のような機能です。スペースを作成する際に、そのスペースで複数のスレッドを運用するか、1つのスレッドのみにするかを指定できます。ここでは、営業部内の色々なトピックに対して1つずつスレッドを作りたいので、複数のスレッドを運用できるようなスペースを作成します。  
+(2)：スレッドとは、スペース内でテーマごとに作成できる掲示板のような機能です。スペースを作成する際に、そのスペースで複数のスレッドを運用するか、1つのスレッドのみにするかを指定できます。ここでは、営業部内の色々なトピックに対して1つずつスレッドを作りたいので、複数のスレッドを運用できるようなスペースを作成します。  
 (3)：スペースの参加メンバーには、営業部のメンバーを設定します。
 
 では、早速「営業部スペース」を作ってみましょう。
 
-1. <Kintone />のポータルで、「スペース」エリアにある+の形をした「スペースを作成する」アイコンをクリックし、[スペースを作成]をクリックします。
-   <Img
-     src="/k/kintone/img-ja/add_space_img01.png"
-     alt="スクリーンショット：[スペースを作成する]アイコンと[スペースを作成]のリンクが枠線で強調された「ポータル」画面"
-   />
+1. <Kintone />のポータルで、［スペース］エリアにある+の形をした［スペースを作成する］アイコンをクリックし、［スペースを作成］をクリックします。
+   <Img src="/k/kintone/img-ja/add_space_img01.png" alt="スクリーンショット：［スペースを作成する］アイコンと［スペースを作成］のリンクが枠線で強調された［ポータル］画面" />
 
-1. [はじめから作る]をクリックします。
+1. ［はじめから作る］をクリックします。
+   <Img src="/k/kintone/img-ja/add_team_space_img02.png" alt="スクリーンショット：［はじめから作る］のリンクが枠線で強調された［スペースの作成］画面" />
 
-   <Img
-     src="/k/kintone/img-ja/add_team_space_img02.png"
-     alt="スクリーンショット：[はじめから作る]のリンクが枠線で強調された「スペースの作成」画面"
-   />
+1. ［基本設定］タブで、スペース名に「営業部スペース」と入力します。
+   <Img src="/k/kintone/img-ja/add_team_space_img03.png" alt="スクリーンショット：［基本設定］タブでスペース名の入力欄が枠線で強調されている" />
 
-1. 「基本設定」タブで、スペース名に「営業部スペース」と入力します。
-
-   <Img
-     src="/k/kintone/img-ja/add_team_space_img03.png"
-     alt="スクリーンショット：「基本設定」タブでスペース名の入力欄が枠線で強調されている"
-   />
-
-1. 「スペースのポータルと複数のスレッドを使用する」にチェックを入れます。  
-    チェックを入れると、スペース内に複数のスレッドを作成できるようになります。たとえば、スペース内に「商談対応スレッド」や「提案書共有スレッド」を作成すると、それぞれのスレッドタイトルに合わせたやりとりの場ができます。
-
-   <Img
-     src="/k/kintone/img-ja/add_team_space_img05.png"
-     alt="スクリーンショット：「基本設定」タブで「スペースのポータルと複数のスレッドを使用する」にチェックが入っている"
-   />
+1. ［スペースのポータルと複数のスレッドを使用する］にチェックを入れます。  
+   チェックを入れると、スペース内に複数のスレッドを作成できるようになります。たとえば、スペース内に「商談対応スレッド」や「提案書共有スレッド」を作成すると、それぞれのスレッドタイトルに合わせたやりとりの場ができます。
+   <Img src="/k/kintone/img-ja/add_team_space_img05.png" alt="スクリーンショット：［基本設定］タブで［スペースのポータルと複数のスレッドを使用する］にチェックが入っている" />
    <Hint>
-     スレッドの作成手順については、「[スレッドでチームメンバーとやり取りしてみよう](/k/ja/id/040144.html)」を参照してください。
+   スレッドの作成手順については、次のページを参照してください。  
+     [スレッドでチームメンバーとやり取りしてみよう](/k/ja/id/040144.html)
    </Hint>
 
-1. [参加メンバー]タブをクリックします。
+1. ［参加メンバー］タブをクリックします。
 
-1. スペースの参加メンバーにしたいユーザーを検索するか、ユーザー検索の右側にある「組織やグループから選択」アイコンから選択して[追加]をクリックします。  
-   ここでは、営業部メンバー全員を設定したいので、「組織やグループから選択」アイコンから「営業部」を選択し、右上に表示される「すべて選択」にチェックを付けて追加します。
+1. スペースの参加メンバーにしたいユーザーを検索するか、ユーザー検索の右側にある［組織やグループから選択］アイコンから選択して［追加］をクリックします。  
+  ここでは、営業部メンバー全員を設定したいので、［組織やグループから選択］アイコンから「営業部」を選択し、右上に表示される［すべて選択］にチェックを付けて追加します。
+   <Img src="/k/kintone/img-ja/add_team_space_img07.png" alt="スクリーンショット：［参加メンバー］タブで［組織やグループから選択］アイコンが枠線で強調されている" />
+   <Img src="/k/kintone/img-ja/add_team_space_img08.png" alt="スクリーンショット：［組織］タブで営業部のメンバーをすべて選択している" />
 
-   <Img
-     src="/k/kintone/img-ja/add_team_space_img07.png"
-     alt="スクリーンショット：「参加メンバー」タブで「組織やグループから選択」アイコンが枠線で強調されている"
-   />
-   <Img
-     src="/k/kintone/img-ja/add_team_space_img08.png"
-     alt="スクリーンショット：「組織」タブで営業部のメンバーをすべて選択している"
-   />
+1. ［保存］をクリックします。
 
-1. [保存]をクリックします。
+これで、次のような「営業部スペース」が完成しました。
+<Img src="/k/kintone/img-ja/add_team_space_img09.png" alt="スクリーンショット：完成した「営業部スペース」" />
 
-これで、次のような営業部スペースが完成しました。
+<Kintone />のトップページに戻ると、［スペース］欄に「営業部スペース」が表示され、クリックすると「営業部スペース」を開くことができます。また、参加メンバーとして設定されたユーザーの<Kintone />でも同じように表示されます。
+<Img src="/k/kintone/img-ja/add_team_space_img10.png" alt="スクリーンショット：［スペース］欄の「営業部スペース」を枠線で強調" />
 
-<Img
-  src="/k/kintone/img-ja/add_team_space_img09.png"
-  alt="スクリーンショット：完成した営業部スペース"
-/>
-
-<Kintone />のトップページに戻ると、「スペース」欄に「営業部スペース」が表示され、クリックすると営業部スペースを開くことができます。また、参加メンバーとして設定されたユーザーの
-<Kintone />でも同じように表示されます。
-<Img
-  src="/k/kintone/img-ja/add_team_space_img10.png"
-  alt="スクリーンショット：「スペース」欄の「営業部スペース」を枠線で強調"
-/>
-
-次は、営業部スペースにスレッドを作成して、スレッド上でメンバーとやり取りしてみましょう。「[スレッドでチームメンバーとやり取りしてみよう](/k/ja/id/040144.html)」を参照してください。
+次は、「営業部スペース」にスレッドを作成して、スレッド上でメンバーとやり取りしてみましょう。次のページを参照してください。  
+[スレッドでチームメンバーとやり取りしてみよう](/k/ja/id/040144.html)
 
 <Hint>
-
-スペースでは、ここで紹介した機能以外にも、チームのやり取りに必要なさまざまな設定が可能です。たとえば、チームメンバー限定のスペースを作成したり、スペースに紐づけたアプリを作成して必要な情報を集約したりできます。詳細は、次のページを参照してください。  
-[スペース](/k/ja/id/040691.html)  
-[スペースの管理](/k/ja/id/04071.html)
-
+  スペースでは、ここで紹介した機能以外にも、チームのやり取りに必要なさまざまな設定が可能です。たとえば、チームメンバー限定のスペースを作成したり、スペースに紐づけたアプリを作成して必要な情報を集約したりできます。詳細は、次のページを参照してください。  
+  [スペース](/k/ja/id/040691.html)  
+  [スペースの管理](/k/ja/id/04071.html)
 </Hint>
