--- a/kintone-help-astro-poc/src/pages/ja/start/app_create/add_employee_app.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/app_create/add_employee_app.mdx
@@ -1,93 +1,88 @@
 ---
 title: "アプリを作ってみよう"
 weight: 100
-type: series
-aliases: /ja/id/040133
+type: "series"
+aliases: "/ja/id/040133"
 layout: "@/layouts/PageLayout.astro"
 ---
 
-import Kintone from "@/components/Kintone.astro";
-import Hint from "@/components/Hint.astro";
-import Note from "@/components/Note.astro";
 import Img from "@/components/Img.astro";
+import Hint from "@/components/Hint.astro";
+import Kintone from "@/components/Kintone.astro";
+import Note from "@/components/Note.astro";
 
 <Kintone />では、さまざまな業務に対応するアプリを作成できます。ここでは、ドラッグアンドドロップで項目を追加して簡単なアプリを作る方法を紹介します。  
 操作手順に従って実際にアプリを作成し、<Kintone />のアプリの構成や特徴を体験してみましょう。
 
 <Hint>
-
-はじめからアプリを作成する方法以外にも、業務で使っているExcelを読み込んでアプリを作る方法などもあります。  
-また、アプリストアからサンプルアプリを追加することも可能です。  
-[Excelファイルからアプリを作成する](/k/ja/id/040625.html)  
-[サンプルアプリを追加する](/k/ja/id/040622.html)
-
+  はじめからアプリを作成する方法以外にも、業務で使っているExcelを読み込んでアプリを作る方法などもあります。  
+  また、アプリストアからサンプルアプリを追加することも可能です。  
+  [Excelファイルからアプリを作成する](/k/ja/id/040625.html)  
+  [サンプルアプリを追加する](/k/ja/id/040622.html)
 </Hint>
 
 ここでは例として、社員情報を管理する「社員情報アプリ」を作成してみます。社員情報アプリには、社員の氏名や入社年月日、住所、メールアドレスなどの入力欄が必要になります。これらの各入力欄を、ドラッグアンドドロップで配置しながらアプリを作成します。
 
 **完成イメージ：**
-
-<Img src="/k/kintone/img-ja/add_employee_app_img08.png" alt="スクリーンショット：完成した「レコード詳細」画面" />
+<Img src="/k/img-ja/add_employee_app_img08.png" alt="スクリーンショット：完成した［レコードの詳細］画面" />
 
 では、早速「社員情報アプリ」を作ってみましょう。
 
-1. <Kintone />のポータルで、「アプリ」エリアにある+の形をした「アプリを作成する」アイコンをクリックします。
-   <Img src="/k/kintone/img-ja/add_employee_app_img01.png" alt="スクリーンショット：「アプリ」エリアの「アプリを作成する」アイコンが枠線で強調されているトップページ" />
+1. <Kintone />のポータルで、［アプリ］エリアにある+の形をした［アプリを作成する］アイコンをクリックします。
+   <Img src="/k/img-ja/add_employee_app_img01.png" alt="スクリーンショット：［アプリ］エリアの［アプリを作成する］アイコンが枠線で強調されているトップページ" />
 
-1. [はじめから作成]をクリックします。
-   <Img src="/k/kintone/img-ja/add_employee_app_img02.png" alt="スクリーンショット：[はじめから作成]のリンクが枠線で強調された「アプリストア」画面" />
-   新しいアプリの作成画面が表示されます。
+1. ［はじめから作成］をクリックします。
+   <Img src="/k/img-ja/add_employee_app_img02.png" alt="スクリーンショット：［はじめから作成］のリンクが枠線で強調された［アプリストア］画面" />
+  新しいアプリの作成画面が表示されます。
 
 1. アプリ名の入力欄に「社員情報」と入力します。
-   <Img src="/k/kintone/img-ja/add_employee_app_img03.png" alt="スクリーンショット：アプリ名の入力欄が枠線で強調された「アプリの設定」画面" />
+   <Img src="/k/img-ja/add_employee_app_img03.png" alt="スクリーンショット：アプリ名の入力欄が枠線で強調された［アプリの設定］画面" />
 
-1. 画面左側の項目（「フィールド」と呼びます）一覧から、まず社員の氏名入力欄として「文字列（1行）」というフィールドを右側のエリアにドラッグアンドドロップします。
-   <Img src="/k/kintone/img-ja/add_employee_app_img04.gif" alt="動画：フィールドを画面左から画面右にドラッグアンドドロップしている" />
+1. 画面左側の項目（「フィールド」と呼びます）一覧から、まず社員の氏名入力欄として［文字列（1行）］というフィールドを右側のエリアにドラッグアンドドロップします。
+   <Img src="/k/img-ja/add_employee_app_img04.gif" alt="動画：フィールドを画面左から画面右にドラッグアンドドロップしている" />
 
-1. 手順4で配置した文字列（1行）フィールドの右上にカーソルを乗せ、フィールド右上に歯車の形をした設定アイコンが表示されたら、[設定]をクリックします。
-   <Img src="/k/kintone/img-ja/add_employee_app_img05.png" alt="スクリーンショット：設定アイコンをクリックしている" />
+1. 手順4で配置した［文字列（1行）］フィールドの右上にカーソルを乗せ、フィールド右上に歯車の形をした設定アイコンが表示されたら、［設定］をクリックします。
+   <Img src="/k/img-ja/add_employee_app_img05.png" alt="スクリーンショット：設定アイコンをクリックしている" />
 
-1. 「フィールド名」に「氏名」と入力して、[保存]をクリックします。
-   <Img src="/k/kintone/img-ja/add_employee_app_img06.png" alt="スクリーンショット：フィールド名の入力欄が枠線で強調されている「文字列（１行）の設定」画面" />
-   これで、「氏名」という入力欄ができました。
+1. ［フィールド名］に「氏名」と入力して、［保存］をクリックします。
+   <Img src="/k/img-ja/add_employee_app_img06.png" alt="スクリーンショット：フィールド名の入力欄が枠線で強調されている［文字列（１行）の設定］画面" />
+  これで、「氏名」という入力欄ができました。
 
 1. 手順4～6を繰り返し、次のフィールドをドラッグアンドドロップで配置してフィールド名を設定します。また、必要に応じて各フィールドの位置をドラッグアンドドロップで調整します。  
 
-   * 数値フィールド：  
+   * ［数値］フィールド：  
      フィールド名を「社員番号」に設定します。
-   * 日付フィールド：  
+   * ［日付］フィールド：  
      フィールド名を「入社年月日」に設定します。
-   * 文字列（複数行）フィールド：  
+   * ［文字列（複数行）］フィールド：  
      フィールド名を「住所」に設定します。
-   * リンクフィールド：
+   * ［リンク］フィールド：
      フィールド名を「メールアドレス」に設定します。  
-     「リンクの設定」画面の「入力値の種類」で、「メールアドレス」を選択します。これで、入力したメールアドレスをクリックすると、Outlookなどのメールソフトが起動してメールを送信できるようになります。
-   * 添付ファイルフィールド：  
+     ［リンクの設定］画面の［入力値の種類］で、［メールアドレス］を選択します。これで、入力したメールアドレスをクリックすると、Outlookなどのメールソフトが起動してメールを送信できるようになります。
+   * ［添付ファイル］フィールド：  
      フィールド名を「顔写真」に設定します。
 
    次のような画面ができたら、入力欄の配置は完了です。
-   <Img src="/k/kintone/img-ja/add_employee_app_img09.png" alt="スクリーンショット：入力欄の配置が完了した「アプリの設定」画面" />
+   <Img src="/k/img-ja/add_employee_app_img09.png" alt="スクリーンショット：入力欄の配置が完了した［アプリの設定］画面" />
 
    <Note>
-
-   上記以外にも、用途に合わせたさまざまなフィールドを準備しています。詳細は、「[<Kintone />で利用できるフィールド一覧](/k/ja/id/040513.html)」を参照してください。
-
+   上記以外にも、用途に合わせたさまざまなフィールドを準備しています。詳細は、次のページを参照してください。  
+      [<Kintone />で利用できるフィールド一覧](/k/ja/id/040513.html)
    </Note>
 
-1. 画面左上の[フォームを保存]をクリックします。  
-   フォームの設定内容が保存されます。この時点ではまだアプリは公開されないため、必要に応じて何度でも保存しながら設定をやり直すことができます。
+1. 画面左上の［フォームを保存］をクリックします。  
+  フォームの設定内容が保存されます。この時点ではまだアプリは公開されないため、必要に応じて何度でも保存しながら設定をやり直すことができます。
 
-1. 画面右上の[アプリを公開]をクリックします。  
-   このボタンをクリックすることで、作成したアプリが公開され、ほかのユーザーも使用できるようになります。[アプリを公開]をクリックするまでは、アプリは公開されません。
-   <Img src="/k/kintone/img-ja/add_employee_app_img07.png" alt="スクリーンショット：[アプリを公開]ボタンが枠線で強調された「アプリの設定」画面" />
+1. 画面右上の［アプリを公開］をクリックします。  
+  このボタンをクリックすることで、作成したアプリが公開され、ほかのユーザーも使用できるようになります。［アプリを公開］をクリックするまでは、アプリは公開されません。
+   <Img src="/k/img-ja/add_employee_app_img07.png" alt="スクリーンショット：［アプリを公開］ボタンが枠線で強調された［アプリの設定］画面" />
 
-これで、社員情報アプリが完成しました。次は、「[アプリにデータを登録してみよう](/k/ja/id/040134.html)」を参照しながら、このアプリに社員情報を登録してみましょう。
+これで、社員情報アプリが完成しました。次のページを参照しながら、このアプリに社員情報を登録してみましょう。  
+[アプリにデータを登録してみよう](/k/ja/id/040134.html)
 
 <Hint>
-
-アプリの機能や操作について、さらに詳しい内容を知りたい場合は、 次のページを参照してください。  
-[アプリとは](/k/ja/id/040616.html)  
-[アプリの作成と削除](/k/ja/id/040621.html)  
-[アプリの管理](/k/ja/id/04010.html)
-
+  アプリの機能や操作について、さらに詳しい内容を知りたい場合は、 次のページを参照してください。  
+  [アプリとは](/k/ja/id/040616.html)  
+  [アプリの作成と削除](/k/ja/id/040621.html)  
+  [アプリの管理](/k/ja/id/04010.html)
 </Hint>
