--- a/kintone-help-astro-poc/src/pages/ja/start/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "スタートガイド"
 weight: 100
-aliases: /ja/id/040130
+aliases: "/ja/id/040130"
 layout: "@/layouts/SectionLayout.astro"
 ---
 
