--- a/kintone-help-astro-poc/src/pages/ja/start/login_started.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/login_started.mdx
@@ -1,19 +1,18 @@
 ---
-title: 無料お試しを申し込み後にログインする
+title: "無料お試しを申し込み後にログインする"
 weight: 200
 disabled:
-  - US
-  - CN
-aliases: /ja/id/040141
-layout: '@/layouts/PageLayout.astro'
+  - "US"
+  - "CN"
+aliases: "/ja/id/040141"
+layout: "@/layouts/PageLayout.astro"
 ---
 
-import Hint from "@/components/Hint.astro";
 import Img from "@/components/Img.astro";
+import Hint from "@/components/Hint.astro";
 import Kintone from "@/components/Kintone.astro";
 import Reference from "@/components/Reference.astro";
 import SlashUi from "@/components/SlashUi.astro";
-
 
 <Kintone />には30日間の無料お試し期間があり、<Kintone />製品サイトから申し込むことができます。  
 [<Kintone />製品サイト](https://kintone.cybozu.co.jp/)
@@ -21,38 +20,28 @@ import SlashUi from "@/components/SlashUi.astro";
 お試しを申し込むと、お試し環境のURLが記載されたメールが届きます。  
 メールを受信したら、早速<Kintone />にログインしてみましょう。
 
-1. 申し込み時に登録したメールアドレスに届いたメール（件名：「<Kintone />試用申込みありがとうございます」）を開き、記載されたURLにアクセスします。
+1. 申し込み時に登録したメールアドレスに届いたメール（件名：［<Kintone />試用申込みありがとうございます］）を開き、記載されたURLにアクセスします。
 
 1. 試用を申し込んだサービスの初期パスワードを設定します。  
-  <Img src="/k/kintone/img-ja/login_started_02.png" alt="スクリーンショット：「初期パスワードの設定」画面" />
+   <Img src="/k/kintone/img-ja/login_started_02.png" alt="スクリーンショット：［初期パスワードの設定］画面" />
 
-1. メールに記載されているログイン名と、手順2で設定した初期パスワードを入力し、[ログイン]をクリックします。  
-  <Img src="/k/kintone/img-ja/to_be_invited_03.png" alt="スクリーンショット：ログイン画面" />
+1. メールに記載されているログイン名と、手順2で設定した初期パスワードを入力し、［ログイン］をクリックします。  
+   <Img src="/k/kintone/img-ja/to_be_invited_03.png" alt="スクリーンショット：ログイン画面" />
    <Hint>
-
    * ログイン名の初期設定は、お試しを申し込む際に登録したメールアドレスに統一されています。
-   * ユーザー情報は、ログイン後に変更できます。変更する場合は、<SlashUi />画面で操作してください。詳細は、次のページを参照してください。  
-     [ユーザー情報の変更](/general/ja/id/020232.html)
-
+      * ユーザー情報は、ログイン後に変更できます。変更する場合は、［<SlashUi />］画面で操作してください。詳細は、次のページを参照してください。  
+        [ユーザー情報の変更](/general/ja/id/020232.html)
    </Hint>
 
-1. 利用可能なサービスの一覧が表示されたら、[<Kintone />]をクリックします。  
-  <Img src="/k/kintone/img-ja/login_started_img01.png" alt="スクリーンショット：サービス選択画面" />
+1. 利用可能なサービスの一覧が表示されたら、［<Kintone />］をクリックします。  
+   <Img src="/k/kintone/img-ja/login_started_img01.png" alt="スクリーンショット：サービス選択画面" />
 
 これで、<Kintone />にログインできました。
 
-<Hint>
+<Hint>URLをお気に入りやブックマークに登録しておくと、次回から直接アクセスできます。</Hint>
 
-URLをお気に入りやブックマークに登録しておくと、次回から直接アクセスできます。
-
-</Hint>
-
-「<Kintone />へようこそ！」ダイアログが表示されたら、[次へ]をクリックして進めると、チームメンバーを招待できる画面が表示されます。次のページを参照して、チームメンバーを招待してみましょう。  
+［<Kintone />へようこそ！］ダイアログが表示されたら、［次へ］をクリックして進めると、チームメンバーを招待できる画面が表示されます。次のページを参照して、チームメンバーを招待してみましょう。  
 [チームメンバーを招待する](/k/ja/id/040139.html)  
-<Img src="/k/kintone/img-ja/to_be_invited_05.png" alt="スクリーンショット：[次へ]ボタンが枠線で強調されている「<Kintone />へようこそ！」ダイアログ" />
+![スクリーンショット：[次へ]ボタンが枠線で強調されている［<Kintone />へようこそ！］ダイアログ](/k/img-ja/to_be_invited_05.png)
 
-<Reference>
-
-[ログインに関するトラブル](/general/ja/id/020262.html)
-
-</Reference>
+<Reference>[ログインに関するトラブル](/general/ja/id/020262.html)</Reference>
